--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "homepage": "https://tomnikoloff.github.io",
-  "name": "react-portfolio",
+  "name": "tomnikoloff.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
