--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap-icons": "^1.11.3",
+    "html-react-parser": "^5.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
